<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appname">CarSpotting</string>
    <string name="app_name">CarSpotting</string>
    <string name="action_settings">Settings</string>
    <string name="Email">Email:                      </string>
    <string name="welcome_words_string">Thanks for using CarSpotting!</string>
    <string name="take_new_string">Take a Photo!</string>
    <string name="album_name">CarSpottingImage</string>
    <string name="desc">Cropped image show</string>
    <string name="clear_rect">Confirm Rectangle</string>
    <string name="make_text_string">Select Make:</string>
    <string name="model_text_string">Select Model:</string>
    <string name="sign_up_string">Sign Up Now!</string>
    <string name="forget_string">Forget Password/Account?</string>
    <string name="finish_annotating">Done!</string>
    <string name="addonemorestring">Annotate one more</string>
    <string name="login_string_onbtn">Start! </string>
    <string name="login_anonymous_string_onbtn">Shit</string>
    <string name="readme_string_onbtn">Fisrt time use?</string>
    <string name="whyemail">Why Email?</string>
    <string name="logging_string">Logging in &#8230;</string>
    <string name="cancel_btn">Cancel</string>
    <string name="signup_nickname_string">Nickname</string>
    <string name="savecurrentrect">Save Information</string>
    <string name="usrname_string">User name:</string>
    <string name="mainscreen_note">Note:</string>
    <string name="mainscreen_note_extent">Please draw rectangle first then select the make and model in the dropdown list</string>
    <string name="mainscreen_btn_saveinformation_string">Save Information</string>
    <string name="mainscreen_textview_guidance_string">Press \"take a Photo!\" to start </string>
    <string name="mainscreen_textview_sampletextwelcome_string">Welcome XXX</string>
    <string name="mainscreen_checkbox_hideguidance_string">Hide guidance</string>
    <string name="readme_title_string">Frequently Asked Questions about AnnoCar</string>
    <string name="readme_question1_string">Q1 What is AnnoCar?</string>
    <string name="readme_answer1_string">A:  XXx, xxxxxx,xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.xxxxxxxxxxxxxxxxxxxxxxx, pppppppppppppppppppp. qqqqqqqqqqqqqqqqqqqq</string>
    <string name="readme_question2_string">Q2 What are the risks of AnnoCar?</string>
    <string name="readme_answer2_string">A:  We promise that we will NEVER use any of your 3G data for any reason, nor will we use your email information except informing you that we want to send a gift to you for your support to AnnoCar, in other words, use AnnoCar will bring you surprise without any harm :)</string>
    <string name="readme_question3_string">Q3 How to use AnnoCar?</string>
    <string name="readme_answer3_string">A:  In order to make you a wonderful experience using AnnoCar, we have detailed guidelines on the leftside of screen when you use it.</string>
    <string name="readme_question4_string">Q4 I find AnnoCar very interesting and intend to modify or improve it. How can I get the source code?</string>
    <string name="readme_answer4_string">A:  Thanks for your effort, you can email us zijunw@andrew.cmu.edu  </string>
    <string name="readme_buttontext_string">OK</string>
    <string name="login_anonymous_string_onchkbx">I dont want to provide my email</string>
    <string name="login_choice_between_string">- or -</string>
    <string name="longin_setting">Settings</string>
    <string name="login_progress_bar_string">Uploading:</string>
    <string name="mainscreen_select_makemodel_btn_string">Make and Model</string>
    <string name="btn_upload_text" >Upload Local Info</string>
</resources>