<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_take_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_new_string" />

        <Button
            android:id="@+id/button_send_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_server_string" />
        <TextView 
            android:id="@+id/make_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_text_string"
            />
        <Spinner 
            android:id="@+id/carmakespinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/model_text"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:text="@string/model_text_string"
            />
        <Spinner android:id= "@+id/carmodelspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/btn_clearRect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_rect" />
    </LinearLayout>

   <!--  <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible" /> -->
  <edu.cmu.carannotationv2.DrawImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible" /> 
</LinearLayout>