<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login" >



  <!--   <TextView
        android:id="@+id/welcome_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        android:text="@stirng/signup_welcome"
        android:textSize="20sp" />
 -->
   <!--  <Button
        android:id="@+id/take_photo_initial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:background="@android:color/background_light"
        android:drawableLeft="@drawable/takepic"
        android:text="@string/take_photo_onStart"
        android:textColor="@android:color/black"
        android:textSize="50sp" 
        style="@style/btnStyleBlackpearl"
        />

    <RadioGroup
        android:id="@+id/loginorvisitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/welcome_words"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_string"
            android:textSize="25sp" 
            android:checked="false" />

        <RadioButton
            android:id="@+id/anno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:checked="true"
            android:text="@string/anno_string"
            android:textSize="25sp" />

    </RadioGroup> -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginorvisitor"
        android:layout_below="@+id/loginorvisitor"
        android:layout_marginLeft="35dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/facebookaccounthint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email" />

        <EditText
            android:id="@+id/facebook_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" 
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password" />

        <EditText
            android:id="@+id/facebook_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        <Button 
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_string"
            style="@style/btnStyleBlackpearl"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_getbackaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_string"
            style="@style/btnStyleArsenic" />      
              </LinearLayout>
    </LinearLayout>

</LinearLayout>